welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:7: error: ';' expected but 'else' found.
	 else {if (speed <= 60)
         ^caughtSpeeding:14: error: Unmatched closing brace '}' ignored here
 }
 ^